@@ -1,8 +1,11 @@
-/* $Id*/
+/* $Id$ */
+
+h2.styleguide {
+  margin: 0.25em 0 2em 0;
+}
 
 #styleguide-header .item-list {
   float: right;
   margin: 0 0 1em 2em;
-  width: 20%;
-  font-family: helvetica, arial, sans-serif;
 }
+
